# cell

./: .gitignore  README.md  cell.bat  pyproject.toml  pytest.ini
src/cell/: __init__.py  app.py  mcp_loader.py
src/cell/skills/: __init__.py  core.py
tests/: agent_messages.json  eval_results.jsonl  realistic_eval_scenarios.yaml  sota_eval_scenario.yaml  test_app.py  test_realistic_eval.py
tests/live/: test_live_integration.py  test_swarm_bench.py
tests/unit/: test_unit.py
